<resources>
    <string name="app_name">千艺</string>
    <string name="registered">注册</string>
    <string name="quick_login">快捷登录</string>
    <string name="pwd_login">账号密码登录</string>
    <string name="login">登录</string>
    <string name="phone">请输入手机号</string>
    <string name="verification_code">请输入短信验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="agreement_1">登录表示您同意</string>
    <string name="agreement_2">《千艺用户协议》</string>
    <string name="other">其他软件登录</string>
    <string name="password">请输入密码</string>
    <string name="password_1">请输入新密码（6-12位数字、字母）</string>
    <string name="password_2">请再次输入密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="submit">确定</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qr_code">QrCodeActivity</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="title_activity_search_friends">SearchFriendsActivity</string>
    <string name="video_edit_segment">设置想要截取的片段</string>
    <string name="music_empty">空空如也</string>
    <string name="music_loading">正在加载本地音乐...</string>
    <string name="follow_shot">合拍</string>
    <string name="next_step">下一步</string>
    <string name="speed_very_slow">极慢</string>
    <string name="speed_slow">慢</string>
    <string name="speed_normal">标准</string>
    <string name="speed_fast">快</string>
    <string name="speed_very_fast">极快</string>
    <string name="aspect">屏比</string>
    <string name="beauty">美颜</string>
    <string name="music">选音乐</string>
    <string name="motion">动作</string>
    <string name="speed">速度</string>
    <string name="filter">滤镜</string>
    <string name="paster">贴纸</string>
    <string name="subtitle">字幕</string>
    <string name="cancel_record">取消拍摄</string>
    <string name="confirm_cancel_edit_content">确认放弃当前编辑的内容？</string>
    <string name="confirm_cancel_record_content">确认放弃当前拍摄的内容？</string>
    <string name="wrong_click">点错了</string>
    <string name="give_up">放弃</string>
    <string name="video_record_title">拍摄</string>
    <string name="video_editer_title">编辑</string>
    <string name="picture_editer_title">图片</string>
    <string name="picture_choose">选择图片</string>
    <string name="video_long_drag">长按拖拽可调整视频顺序</string>
    <string name="select_bgm">选择背景音乐</string>
    <string name="mic_volume">录音音量</string>
    <string name="bgm_volume">背景音乐音量</string>
    <string name="tips">提示</string>
    <string name="delete_bgm_or_not">确定清除已添加的背景音乐？</string>
    <string name="confirm_delete">确定清除</string>
    <string name="bgm_start_position">当前从%1$s开始</string>
    <string name="no_content">暂无内容哦~</string>
    <string name="none">无</string>
    <string name="reverse">倒放</string>
    <string name="slow_motion">慢动作</string>
    <string name="repeate">反复</string>
    <string name="add">新增</string>
    <string name="motion_soul_out">灵魂出窍</string>
    <string name="motion_split">视频分裂</string>
    <string name="motion_rock_light">动感光波</string>
    <string name="motion_dark_dream">暗黑幻境</string>
    <string name="motion_win_shadow">百叶窗</string>
    <string name="motion_ghost_shadow">鬼影</string>
    <string name="motion_phantom_shadow">幻影</string>
    <string name="motion_ghost">幽灵</string>
    <string name="motion_lightning">闪电</string>
    <string name="motion_mirror">镜像</string>
    <string name="motion_illusion">幻觉</string>
    <string name="cancel_publish_title">取消上传</string>
    <string name="cancel_publish_msg">视频即将上传完成，真的要取消上传吗？</string>
    <string name="revert">撤销</string>
    <string name="complete">完成</string>
    <string name="state_pause">暂停</string>
    <string name="save_success">保存完成</string>
    <string name="download">下载</string>
    <string name="downloaded">已下载</string>
    <string name="use">使用</string>
    <string name="downloading">下载中</string>
    <string name="dynamic_paster">动态贴纸</string>
    <string name="static_paster">静态贴纸</string>
    <string name="bublle_style">气泡样式</string>
    <string name="text_color">文字颜色</string>
    <string name="video_joining">视频拼接中...</string>
    <string name="cancel_joining">取消拼接视频</string>
    <string name="publish_success">发布成功</string>
    <string name="about_tip1">小视频是由腾讯视频云团队提供的一款原型级别的 APP，致力于以 DEMO 的形式向您展示腾讯视频云在短视频领域的各项能力。比如如何利用视频云 SDK 进行短视频的分段录制和编辑，如何利用对象存储（COS）服务实现视频上传和发布，如何使用点播（VOD）服务实现视频的分发。</string>
    <string name="language_setting_activity_language">语言</string>
    <string name="language_setting_activity_follow_system">跟随系统（重启生效）</string>
    <string name="language_setting_activity_save">保存</string>
    <string name="user_info_fragment_setting">设置</string>
    <string name="setting_activity_language">语言</string>
    <string name="setting_activity_setting">设置</string>
    <string name="beauty_setting_pannel_style">风格</string>
    <string name="beauty_setting_pannel_beauty">美颜</string>
    <string name="beauty_setting_pannel_filter">滤镜</string>
    <string name="beauty_setting_pannel_dynamic_effect">动效</string>
    <string name="beauty_setting_pannel_key">抠背</string>
    <string name="beauty_setting_pannel_green_screen">绿幕</string>
    <string name="beauty_setting_pannel_style_smooth">美颜(光滑)</string>
    <string name="beauty_setting_pannel_style_natural">美颜(自然)</string>
    <string name="beauty_setting_pannel_style_hazy">美颜(天天P图)</string>
    <string name="beauty_setting_pannel_beauty_beauty">美颜</string>
    <string name="beauty_setting_pannel_beauty_whitening">美白</string>
    <string name="beauty_setting_pannel_beauty_ruddy">红润</string>
    <string name="beauty_setting_pannel_beauty_big_eye">大眼</string>
    <string name="beauty_setting_pannel_beauty_thin_face">瘦脸</string>
    <string name="beauty_setting_pannel_beauty_v_face">V脸</string>
    <string name="beauty_setting_pannel_beauty_chin">下巴</string>
    <string name="beauty_setting_pannel_beauty_short_face">短脸</string>
    <string name="beauty_setting_pannel_beauty_small_nose">小鼻</string>
    <string name="beauty_setting_pannel_filter_none">无</string>
    <string name="beauty_setting_pannel_filter_standard">标准</string>
    <string name="beauty_setting_pannel_filter_cheery">樱红</string>
    <string name="beauty_setting_pannel_filter_cloud">云裳</string>
    <string name="beauty_setting_pannel_filter_pure">纯真</string>
    <string name="beauty_setting_pannel_filter_orchid">白兰</string>
    <string name="beauty_setting_pannel_filter_vitality">元气</string>
    <string name="beauty_setting_pannel_filter_super">超脱</string>
    <string name="beauty_setting_pannel_filter_fragrance">香氛</string>
    <string name="beauty_setting_pannel_filter_romantic">浪漫</string>
    <string name="beauty_setting_pannel_filter_fresh">清新</string>
    <string name="beauty_setting_pannel_filter_beautiful">唯美</string>
    <string name="beauty_setting_pannel_filter_pink">粉嫩</string>
    <string name="beauty_setting_pannel_filter_reminiscence">怀旧</string>
    <string name="beauty_setting_pannel_filter_blues">蓝调</string>
    <string name="beauty_setting_pannel_filter_cool">清凉</string>
    <string name="beauty_setting_pannel_filter_Japanese">日系</string>
    <string name="beauty_setting_pannel_dynamic_effect_none">无</string>
    <string name="beauty_setting_pannel_dynamic_effect_boom">Boom</string>
    <string name="beauty_setting_pannel_dynamic_effect_neon_mouse">霓虹鼠</string>
    <string name="beauty_setting_pannel_dynamic_effect_star_ear">星耳</string>
    <string name="beauty_setting_pannel_dynamic_effect_crazy_cheer_up">疯狂打call</string>
    <string name="beauty_setting_pannel_dynamic_effect_Q_cancelonstellation">Q星座</string>
    <string name="beauty_setting_pannel_dynamic_effect_colored_ribbon">彩色丝带</string>
    <string name="beauty_setting_pannel_dynamic_effect_bands_hairband">刘海发带</string>
    <string name="beauty_setting_pannel_dynamic_effect_change_face">变脸</string>
    <string name="beauty_setting_pannel_dynamic_effect_purple_kitten">紫色小猫</string>
    <string name="beauty_setting_pannel_dynamic_effect_flower_faerie">花仙子</string>
    <string name="beauty_setting_pannel_dynamic_effect_little_Princess">小公举</string>
    <string name="beauty_setting_pannel_key_none">无动效</string>
    <string name="beauty_setting_pannel_key_AI_key">AI抠背</string>
    <string name="beauty_setting_pannel_green_screen_none">无</string>
    <string name="beauty_setting_pannel_green_screen_good_luck">Good luck</string>
    <string name="fragment_user_info_please_lonin">请先登录</string>
    <string name="fragment_bgm_cancel">取消</string>
    <string name="dialog_ugc_tip_already_known">知道了</string>
    <string name="unit_second">秒</string>
    <string name="fragment_confirm_confirm">确定</string>
    <string name="fragment_confirm_cancel">取消</string>
    <string name="fragment_confirm_ok">确定</string>
    <string name="fragment_confirm_input_tip">请输入内容</string>
    <string name="activity_register_register_new_user">注册新用户</string>
    <string name="tc_ugc_video_list_adapter_video_state_normal">已审核</string>
    <string name="tc_ugc_video_list_adapter_video_state_in_audit">审核中</string>
    <string name="tc_ugc_video_list_adapter_video_state_pornographic">涉黄</string>
    <string name="tc_ugc_video_list_adapter_just_now">刚刚</string>
    <string name="tc_ugc_video_list_adapter_mins_ago">分钟前</string>
    <string name="tc_ugc_video_list_adapter_hours_ago">小时前</string>
    <string name="tc_ugc_video_list_adapter_days_ago">天前</string>
    <string name="tc_ugc_video_list_adapter_min_ago">分钟前</string>
    <string name="tc_ugc_video_list_adapter_hour_ago">小时前</string>
    <string name="tc_ugc_video_list_adapter_day_ago">天前</string>
    <string name="fragment_videolist_no_content">暂无内容噢~</string>
    <string name="tc_picture_join_activity_toast_picture_is_abnormal_and_finish_editing">图片异常，结束编辑</string>
    <string name="tc_picture_join_activity_toast_cancel_video_generation">取消视频生成</string>
    <string name="activity_picture_join_left_right">左右</string>
    <string name="activity_picture_join_up_down">上下</string>
    <string name="activity_picture_join_zoom_in">放大</string>
    <string name="activity_picture_join_zoom_out">缩小</string>
    <string name="activity_picture_join_rotate">旋转</string>
    <string name="activity_picture_join_fade_in_and_fade_out">淡入淡出</string>
    <string name="fragment_input_word_input_tip">请输入内容</string>
    <string name="fragment_input_word_cancel">取消</string>
    <string name="fragment_input_word_ok">确定</string>
    <string name="layout_joiner_progress_video_is_generating">视频生成中...</string>
    <string name="audio_ctrl_accompaniment">伴奏</string>
    <string name="audio_ctrl_finish">结束</string>
    <string name="audio_ctrl_voice">人声</string>
    <string name="audio_ctrl_vol">音量调节</string>
    <string name="tc_login_activity_login_successfully">登录成功</string>
    <string name="sound_effect_pannel_change_voice">变声</string>
    <string name="sound_effect_pannel_record_reverb">混响</string>
    <string name="layout_sound_effect_ktv">KTV</string>
    <string name="layout_sound_effect_original_sound">原声</string>
    <string name="layout_sound_effect_room">房间</string>
    <string name="layout_sound_effect_hall">会堂</string>
    <string name="layout_sound_effect_deep">低沉</string>
    <string name="layout_sound_effect_loud">洪亮</string>
    <string name="layout_sound_effect_magnetic">磁性</string>
    <string name="layout_sound_effect_original_sound2">原声</string>
    <string name="layout_sound_effect_wild_kid">熊孩子</string>
    <string name="layout_sound_effect_lolita">萝莉</string>
    <string name="layout_sound_effect_uncle">大叔</string>
    <string name="layout_sound_effect_heavy_metal">重金属</string>
    <string name="layout_sound_effect_foreigner">外国人</string>
    <string name="layout_sound_effect_beast">困兽</string>
    <string name="layout_sound_effect_fat_boy">死肥仔</string>
    <string name="layout_sound_effect_heavy_current">强电流</string>
    <string name="layout_sound_effect_heavy_machine">重机械</string>
    <string name="layout_sound_effect_vacant">空灵</string>
</resources>