<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_login"/>

    <LinearLayout
        android:background="@drawable/shape_corner_login_linearlayout"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="300dp">
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_corner_login_new"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <EditText
                android:id="@+id/et_registered_phone"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#888888"
                android:hint="@string/phone"
                android:textSize="14sp"
                android:paddingLeft="15dp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/li_verification_login"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="top"
            android:layout_height="70dp">
            <RelativeLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/shape_corner_login_new"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <EditText
                    android:id="@+id/et_registered_verification_code"
                    android:layout_centerVertical="true"
                    android:textColorHint="#888888"
                    android:hint="@string/verification_code"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:paddingLeft="15dp"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_registered_verification_code"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/qy_black"
                    android:textSize="14sp"
                    android:text="获取验证码"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_next_step"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:textColor="@color/qy_white"
            android:text="@string/next_step"
            android:textSize="14sp"
            android:background="@drawable/shape_corner_login_button"
            android:layout_height="45dp" />

    </LinearLayout>

</LinearLayout>
